--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="election-preview">
         <!-- Candidate information section -->
         <div class="candidate-info">
-            <h1>Donald Ghandy</h1>
-            <p>Party: Partido Vermelho</p>
+            <h1>Donald Trump</h1>
+            <p>Republican Party (United States)</p>
         </div>
 
         <!-- Election details section -->
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Include the JavaScript file for dynamic functionality -->
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
